@@ -1,5 +1,7 @@
 # CHANGELOG
 # ---
+# * Add additional options to the PayPal Website Payments Standard Helper [Rick Olson]
+#
 # * Move generate_unique_id method to Gateway class so other gateways can also use it [cody]
 #
 # * Allow notification name / value pairs to have a . in the name like checkout.x = 400 [cody]
